<resources>
    <string name="app_name">MyPoll</string>
    <string name="create_a_poll">Create A Poll</string>
    <string name="vote_for_a_poll">find an existing poll and vote</string>
    <string name="title_activity_create_poll">CreatePollActivity</string>
    <string name="add_option">+Add</string>
    <string name="question_prompt">Type your question here !</string>
    <string name="submit">Submit</string>
    <string name="title_paired_devices">paired devices</string>
    <string name="title_other_devices">other_devices</string>
    <string name="button_scan">scan for devices</string>
    <string name="none_paired">no paired devices</string>
    <string name="scanning">scanning</string>
    <string name="select_device">select device</string>
    <string name="none_found">none found</string>
    <string name="button_submite_devices">Submit</string>
    <string name="title_activity_connect_to_vote">ConnectToVote</string>
    <string name="title_activity_vote">VoteActivity</string>
</resources>
