<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_centerHorizontal = "true"
    android:gravity="center_horizontal"
    android:id="@+id/main_create_poll"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.uclacsm117.mysimlpepoll.CreatePollActivity"
    tools:showIn="@layout/activity_create_poll">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_centerHorizontal = "true"
        android:gravity="center_horizontal"
        android:id="@+id/create_poll_layout"
        android:layout_height="match_parent">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:id="@+id/question_text"
            android:hint="@string/question_prompt"
            />

        <LinearLayout
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:id = "@+id/options_container_layout"
            android:layout_below="@+id/button_add_option"
            android:layout_width= "match_parent"
            android:layout_height="wrap_content">


        </LinearLayout>

        <Button
            style="?android:attr/buttonStyleSmall"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_option"
            android:id="@+id/button_add_option"
            android:layout_alignParentTop="true"
            android:layout_below="@+id/question_text"
            android:layout_centerHorizontal="true"

            android:onClick="AddPollOption"
            />
        <Button
            android:text="@string/submit"
            android:layout_below="@+id/button_add_option"
            android:onClick="SubmitNewPoll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />





    </LinearLayout>


</LinearLayout>
